--- a/quickstart/src/MVC/MVC.csproj
+++ b/quickstart/src/MVC/MVC.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" Version="7.0.10" />
+    <PackageReference Include="IdentityModel" Version="6.2.0" />
   </ItemGroup>
 
 </Project>
